3rd chap finished

--- a/src/thesis.bib
+++ b/src/thesis.bib
@@ -53,13 +53,13 @@
 }
 
 @article{toql,
-    author = {Evdoxios Baratis, Euripides G.M. Petrakis, Sotiris Batsakis, Nikolaos Maris, and Nikolaos Papadakis},
+    author = {Evdoxios Baratis Euripides G.M. Petrakis Sotiris Batsakis Nikolaos Maris and Nikolaos Papadakis},
     title = {TOQL: Temporal Ontology Query Language}
 }
 
 @article{xcpath,
     author = {Maarten Marx},
-    title = {XCPath, the first order complete XPath dialect}
+    title = {XCPath the first order complete XPath dialect}
 }
 
 @article{ling,
@@ -69,8 +69,8 @@
 }
 
 @article{web,
-    author = {James Bailey, Francois Bry, Tim Furche, and Sebastian Schaffert},
-    title = {Web and Semantic Web Query Languages: A Survey}
+    author = {James Bailey Francois Bry Tim Furche and Sebastian Schaffert},
+    title = {Web and Semantic Web Query Languages A Survey}
 }
 
 @article{frames,
@@ -80,7 +80,7 @@
 }
 
 @article{artale,
-    author = {Alessandro Artale , Roman Kontchakov , Alisa Kovtunova , Vladislav Ryzhikov , Frank Wolter , and Michael Zakharyaschev },
+    author = {Alessandro Artale  Roman Kontchakov  Alisa Kovtunova  Vladislav Ryzhikov  Frank Wolter  and Michael Zakharyaschev },
     title = {Ontology-Mediated Query Answering over Temporal Data: A Survey},
     journal = {24th International Symposium on Temporal Representation and Reasoning},
     year = {2017},
@@ -129,7 +129,7 @@
 }
 
 @article{barcelo,
-    author = {Pablo Barcelo, Leonid Libkin},
+    author = {Pablo Barcelo Leonid Libkin},
     title = {Temporal Logic over Unranked Trees},
     year = {2008}
 }
@@ -149,7 +149,7 @@
 }
 
 @article{not,
-    author = {F.Siasar djahantighi, M.Norouzifard, S.H.Davarpanah, M.H.Shenassa},
+    author = {F.Siasar Djahantighi M.Norouzifard S.H.Davarpanah M.H.Shenassa},
     title = {Using Natural Language Processing in Order to Create SQL Queries},
     journal = {Proceedings of the International Conference on Computer and Communication Engineering},
     year = {2008}
@@ -170,3 +170,82 @@
     number = {5}
 }
 
+@article{bartlema,
+    author = {J. Bartlema and L. Winkelbauer},
+    title = {Modelling Kinship with LISP; a two-sex model of kin-counts},
+    journal = {IIASA Working Papers},
+    year = {1961},
+    volume = {WP-96-069},
+    pages = {48},
+    number = {1}
+}
+
+@book{adams,
+    author = {R. Adams},
+    title = {The Nature of the Family},
+    publisher = {Penguin},
+    year = {1971},
+}
+
+@article{findler,
+    author = {Nicholas V. Findler},
+    title = {Automatic Rule Discovery for Field Work in Antropology},
+    journal = {Computers and the Humanities},
+    year = {1992},
+    volume = {26},
+    pages = {285-292},
+    number = {1}
+}
+
+@book{strauss,
+    author = {Levi-Strauss},
+    title = {The Elementary Structures of Kinship},
+    publisher = {London: Eyre and Spottiswoode},
+    year = {1969},
+}
+
+@article{read,
+    author = {D. W. Read},
+    title = {An Algebraic account of the American Kinship Terminology},
+    journal = {Current Antropology},
+    year = {1984},
+    volume = {25},
+    pages = {417--429},
+    number = {49}
+}
+
+@article{vlad,
+    author = {Vladimir Periclev and Raul E. Valdes-Perez},
+    title = {Automatic Componental Analysis of Kinship Semantics with a Proposed Structural Solution to the Problem of Multiple Models},
+    journal = {Anthropological Linguistics},
+    year = {1998},
+    volume = {40},
+    pages = {272-317},
+    number = {2}
+}
+
+@book{morgan,
+    author = {Lewis Henry Morgan},
+    title = {Systems of consanguity and affinity of the human family},
+    publisher = {Smithsonian Institution},
+    year = {1870},
+    memo = {17, series, address, edition, month, note},
+}
+
+@book{cormen,
+    author= {Thomas H. Cormen Charles E. Leiserson Ronald L. Rivest Clifford Stein},
+    title = {Introduction to Algorithms},
+    publisher = {The MIT Press},
+    year = {2009},
+    edition = {3}
+}
+
+@article{chomsky,
+    author = {Noam Chomsky},
+    title = {Three models for the description of language},
+    journal = { IRE Transactions on Information Theory},
+    year = {1956},
+    volume = {2},
+    pages = {113-124},
+    number = {1}
+}
