--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -17,6 +17,7 @@
 \usepackage{cite}
 \usepackage{amsmath,amsfonts}
 \usepackage{amsthm}
+\usepackage{stmaryrd} % for /llbracket /rrbracket
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
@@ -58,6 +59,34 @@
 
 
 
+\usepackage{color}
+\usepackage{listings}
+\usepackage{caption}
+
+\newcounter{nalg}[chapter] % defines algorithm counter for chapter-level
+\renewcommand{\thenalg}{\thechapter .\arabic{nalg}} %defines appearance of the algorithm counter
+\DeclareCaptionLabelFormat{algocaption}{Algorithm \thenalg} % defines a new caption label as Algorithm x.y
+
+\lstnewenvironment{algorithm}[1][] %defines the algorithm listing environment
+{
+    \refstepcounter{nalg} %increments algorithm number
+    \captionsetup{labelformat=algocaption,labelsep=colon} %defines the caption setup for: it uses label format as the declared caption label above and makes label and caption text to be separated by a ':'
+    \lstset{ %this is the stype
+        mathescape=true,
+        frame=tB,
+        numbers=left,
+        numberstyle=\tiny,
+        basicstyle=\scriptsize,
+        keywordstyle=\color{black}\bfseries\em,
+        %add the keywords you want, or load a language as Rubens explains in his comment above.
+        keywords={,input, note, output, return, datatype, function, in, if, else, foreach, while, begin, end, }
+        numbers=left,
+        xleftmargin=.04\textwidth,
+        #1 % this is to add specific settings to an usage of this environment (for instance, the caption and referable label)
+    }
+}
+{}
+
 
 \pagestyle{fancyplain}
 
@@ -87,7 +116,7 @@
 \include{title}
 \include{largetitle}
 \newpage
-\dedication{To my parents and close relatives. This work would't be possible without them.}
+\dedication{To my parents and close relatives. This work would't be possible without their help.}
 \newpage
 \setcounter{page}{5}
 
