+ 4th and 6th chaps

--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -18,6 +18,7 @@
 \usepackage{amsmath,amsfonts}
 \usepackage{amsthm}
 \usepackage{stmaryrd} % for /llbracket /rrbracket
+\usepackage{syntax} % for BNF notation
 \newtheorem{theorem}{Theorem}
 \newtheorem{corollary}{Corollary}
 \newtheorem{lemma}{Lemma}
@@ -116,7 +117,7 @@
 \include{title}
 \include{largetitle}
 \newpage
-\dedication{To my parents and close relatives. This work would't be possible without their help.}
+\dedication{To my parents and close relatives. This work would not be possible without their help.}
 \newpage
 \setcounter{page}{5}
 
@@ -132,6 +133,7 @@
 \newpage
 \include{chapters/abstract}
 
+\include{chapters/acknowledgements}
 \include{chapters/chapter1}
 \include{chapters/chapter2}
 \include{chapters/chapter3}
