all but 5th finished

--- a/src/thesis.bib
+++ b/src/thesis.bib
@@ -249,3 +249,38 @@
     pages = {113-124},
     number = {1}
 }
+
+@online{gensoft,
+    author = {Louis Kessler},
+    title = {Genealogy Software Reviews},
+    url = {http://www.gensoftreviews.com/},
+    note = {2018/May},
+}
+
+@online{fambuild,
+    author = {My Heritage, Inc.},
+    title = {Family Tree Builder},
+    url = {https://www.myheritage.com/family-tree-builder},
+    note = {2018/May},
+}
+
+@online{neo4j,
+    author = {Neo4j, Inc.},
+    title = {Neo4j Graph Platform},
+    url = {https://neo4j.com},
+    note = {2018/May},
+}
+
+@online{rank,
+    author = {Solid IT},
+    title = {DB-Engines Ranking of Graph DBMS},
+    url = {https://db-engines.com/en/ranking/graph+dbms},
+    note = {2018/May},
+}
+
+@online{roots,
+    author = {RootsMagic Inc.},
+    title = {RootsMagic Genealogy Software},
+    url = {http://www.rootsmagic.com},
+    note = {2018/May},
+}
