--- a/src/thesis.tex
+++ b/src/thesis.tex
@@ -119,6 +119,7 @@
 \newpage
 \dedication{To my parents and close relatives. This work would not be possible without their help.}
 \newpage
+\include{chapters/acknowledgements}
 \setcounter{page}{5}
 
 \newpage
@@ -127,13 +128,12 @@
 \newpage
 
 \tableofcontents
-\listoftables
+% \listoftables
 \listoffigures
 
 \newpage
 \include{chapters/abstract}
 
-\include{chapters/acknowledgements}
 \include{chapters/chapter1}
 \include{chapters/chapter2}
 \include{chapters/chapter3}
