--- a/src/thesis.bib
+++ b/src/thesis.bib
@@ -204,16 +204,6 @@
     year = {1969},
 }
 
-@article{read,
-    author = {D. W. Read},
-    title = {An Algebraic account of the American Kinship Terminology},
-    journal = {Current Antropology},
-    year = {1984},
-    volume = {25},
-    pages = {417--429},
-    number = {49}
-}
-
 @article{vlad,
     author = {Vladimir Periclev and Raul E. Valdes-Perez},
     title = {Automatic Componental Analysis of Kinship Semantics with a Proposed Structural Solution to the Problem of Multiple Models},
@@ -222,14 +212,6 @@
     volume = {40},
     pages = {272-317},
     number = {2}
-}
-
-@book{morgan,
-    author = {Lewis Henry Morgan},
-    title = {Systems of consanguity and affinity of the human family},
-    publisher = {Smithsonian Institution},
-    year = {1870},
-    memo = {17, series, address, edition, month, note},
 }
 
 @book{cormen,
@@ -282,5 +264,27 @@
     author = {RootsMagic Inc.},
     title = {RootsMagic Genealogy Software},
     url = {http://www.rootsmagic.com},
+    note = {2018/May},
+}
+
+@article{eiffel,
+    author = {Bertrand Meyer},
+    title = {Design by Contract},
+    journal = {Technical Report TR-EI-12/CO},
+    year = {1986},
+    volume = {12},
+}
+
+@book{beck,
+    author = {Kent Beck},
+    title = {Test-Driven Development by Example},
+    publisher = {Addison Wisley},
+    year = {2003},
+}
+
+@online{junit,
+    author = {Kent Beck et al.},
+    title = {JUnit 5 Java Library},
+    url = {https://junit.org/junit5/},
     note = {2018/May},
 }
